feat : erase node

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,6 @@
 .PHONY: test
 
-CFLAGS=-I ../src -Wall -g #-DSENTINEL
+CFLAGS=-I ../src -Wall -g -DSENTINEL
 
 test: test-rbtree
 	./test-rbtree
@@ -13,3 +13,4 @@ test-rbtree: test-rbtree.o ../src/rbtree.o
 
 clean:
 	rm -f test-rbtree *.o
+	rm -f ../src/rbtree.o
